# automl-catboost-pipeline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_training_pipeline.ipynb  02_scoring.ipynb
src/: __init__.py  config.py  pipeline.py  utils.py
src/data/: __init__.py  balancer.py  loader.py  splitter.py
src/evaluation/: __init__.py  metrics.py
src/feature_selection/: __init__.py  backward_selection.py  base.py  correlation_filter.py  forward_selection.py  importance_filter.py  missing_filter.py  psi_filter.py  psi_time_filter.py  selector.py  variance_filter.py
src/optimization/: __init__.py  optimizer.py  search_space.py
src/preprocessing/: __init__.py  base.py  date_transformer.py  decimal_handler.py  preprocessor.py  type_detector.py
src/scoring/: __init__.py  artifacts.py  scorer.py
src/visualization/: __init__.py  metrics_plots.py  time_dynamics.py
tests/: conftest.py
tests/src/: test_config.py  test_pipeline.py
tests/src/data/: test_balancer.py  test_loader.py  test_splitter.py
tests/src/feature_selection/: test_missing_filter.py  test_psi_filter.py  test_psi_time_filter.py  test_selector.py
tests/src/optimization/: test_optimizer.py
tests/src/preprocessing/: test_date_transformer.py  test_preprocessor.py  test_type_detector.py
tests/src/scoring/: test_artifacts.py  test_scorer.py
